Author URI Changed in style.css

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 Theme Name: codexin
 Theme URI: http://underscores.me/
 Author: Codexin Technologies Migrated
-Author URI: http://www.codexin.com
+Author URI: http://www.themeitems.com
 Description: Description
 Version: 1.0.0
 License: GNU General Public License v2 or later
