--- a/style.css
+++ b/style.css
@@ -444,7 +444,7 @@ a.mpopup {
 }
 
 .cx-header-wrapper {
-    position: absolute;
+    position: relative;
     top:0;
     left:0;
     display: block;
