--- a/style.css
+++ b/style.css
@@ -683,6 +683,7 @@ nav.menu-primary-menu-container {
     position: relative;
     text-align: center;
     overflow: hidden;
+    margin-bottom: 25px;
 }
 
 .item-img-wrap img {
@@ -719,7 +720,7 @@ nav.menu-primary-menu-container {
 }
 
 .post-detail {
-    margin-top: 25px;
+    
     margin-bottom: 0px;
     border-top: 1px solid #ebeaea;
     border-bottom: 1px solid #ebeaea;
